--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,50 +1,168 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(90deg, rgba(239,240,36,0.8323529240797882) 48%, rgba(32,137,209,0.6642856971890319) 64%);
-  color: #212121;
   line-height: 1.5;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#search-box {
-  font: inherit;
-  padding: 8px;
-  width: 200px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  border: 2px solid white;
-  transition: transform, 1.3s;
-}
-
-#search-box:hover,
-#search-box:focus {
-  width: 300px;
-  border: 2px solid blue;
+  background-color: #fff;
+  color: #2f2f37;
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
-  padding-left: 0;
-  color: blue;
-}
-
-li {
-  padding: 10px;
 }
 
 img {
-  margin: auto;
-  width: 300px;
-  height: auto;
   display: block;
+  width: 100%;
+  height: auto;
+}
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  margin-top: 100px;
+  padding: 0 10px 0 10px;
+}
+
+#search-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 25px 0 25px 0;
+
+  background: linear-gradient(
+    90deg,
+    rgba(239, 240, 36, 0.8323529240797882) 48%,
+    rgba(32, 137, 209, 0.6642856971890319) 64%
+  );
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.search-form__input {
+  width: 300px;
+  height: 10px;
+  padding: 8px;
+
+  font-size: 16px;
+
+  outline: none;
+  border: 2px solid white;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  transition: transform, 1.3s;
+}
+
+.search-form__input::placeholder {
+  font-size: 16px;
+  color: #065b8b;
+}
+
+.search-form__button {
+  width: 100px;
+  height: 30px;
+
+  font-size: 16px;
+
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+
+  cursor: pointer;
+  transition: background-color 300ms linear, color 300ms linear;
+}
+
+.search-form__button:hover,
+.search-form__button:focus {
+  color: #065b8b;
+  background-color: rgb(242, 245, 79);
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.photo-card {
+  margin-bottom: 10px;
+  width: calc((100% - 20px * 6) / 3);
+
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.photo {
+  display: block;
+  width: 100%;
+  height: 250px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  font-size: 14px;
+  border: 1px solid #c3c2c2;
+
+  padding: 20px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.load-more {
+  width: 200px;
+  height: 40px;
+
+  margin-top: 50px;
+  margin-bottom: 30px;
+  margin-left: 50%;
+
+  font-size: 16px;
+
+  border: none;
+  border-radius: 5px;
+
+  cursor: pointer;
+  background-color: #7f878b;
+  transition: background-color 300ms linear, color 300ms linear;
+}
+.load-more:hover,
+.load-more:focus {
+  color: rgb(242, 245, 79);
+  background-color: #065b8b;
+}
+
+.end-text {
+  margin: 30px 0 30px 0;
+  text-align: center;
+  font-size: 20px;
 }
