--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,6 +101,7 @@ p {
 }
 
 .gallery {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -109,7 +110,7 @@ p {
 
 .photo-card {
   margin-bottom: 10px;
-  width: calc((100% - 20px * 6) / 3);
+  max-width: 450px;
 
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
@@ -142,9 +143,7 @@ p {
   width: 200px;
   height: 40px;
 
-  margin-top: 50px;
-  margin-bottom: 30px;
-  margin-left: 50%;
+  margin: 50px auto 30px;
 
   font-size: 16px;
 
